Broken text on Yandex maps
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | - | fixed |
| firefox81 | --- | fixed |
People
(Reporter: jan, Assigned: jgilbert)
References
(Regression, )
Details
(Keywords: correctness, nightly-community, regression)
Attachments
(3 files)
Gnome Xwayland, Debian Testing, Intel HD Graphics 630 (KBL GT2)
mozregression --good 2020-04-14 --bad 2020-08-14 -a 'https://yandex.com/maps/?ll=17.914589%2C51.457275&z=4.91'
17:41.77 INFO: Last good revision: f5417fa966f71e4002613c3b282f63c7120966c7
17:41.77 INFO: First bad revision: 978c7a6ddb55e53f9230112f5455a4970ee5d7b4
17:41.77 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=f5417fa966f71e4002613c3b282f63c7120966c7&tochange=978c7a6ddb55e53f9230112f5455a4970ee5d7b4
mozregression --repo autoland --good f5417fa966f71e4002613c3b282f63c7120966c7 --bad 978c7a6ddb55e53f9230112f5455a4970ee5d7b4 -a 'https://yandex.com/maps/?ll=17.914589%2C51.457275&z=4.91'
0:02.25 INFO: Getting autoland builds between f5417fa966f71e4002613c3b282f63c7120966c7 and 978c7a6ddb55e53f9230112f5455a4970ee5d7b4
0:13.88 WARNING: Skipping build 57e33fc3bce2: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.57e33fc3bce24dd10820f8c5fd47c104a2872414.firefox.linux64-opt'
0:23.65 WARNING: Skipping build bcc143515768: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.bcc1435157681e1d1830e8d18069f8ba2a97a402.firefox.linux64-opt'
0:33.71 WARNING: Skipping build 986960f3dd90: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.986960f3dd902342c4720980dea94b3138e3ef9a.firefox.linux64-opt'
0:44.06 WARNING: Skipping build 7b973a0e7be9: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.7b973a0e7be9f8213545c3e702f759c8ab70affb.firefox.linux64-opt'
0:54.10 WARNING: Skipping build 6a9bd9bf5891: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.6a9bd9bf58915c21660322ea675558df47956a5f.firefox.linux64-opt'
1:04.54 WARNING: Skipping build 205329cc5f30: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.205329cc5f3073075ad768606fa092ed81a3673c.firefox.linux64-opt'
1:04.54 INFO: No more integration revisions, bisection finished.
1:04.54 INFO: Last good revision: f5417fa966f71e4002613c3b282f63c7120966c7
1:04.54 INFO: First bad revision: 978c7a6ddb55e53f9230112f5455a4970ee5d7b4
1:04.54 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=f5417fa966f71e4002613c3b282f63c7120966c7&tochange=978c7a6ddb55e53f9230112f5455a4970ee5d7b4
Could it be bug 1607940?
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Comment 1•5 years ago
|
||
Basic and WebRender are affected.
Comment 2•5 years ago
|
||
Likely too late for a fix in 80. It sounds like this isn't reproducible on windows. I see it on linux (with Xorg and nvidia graphics).
| Reporter | ||
Comment 3•5 years ago
|
||
| Reporter | ||
Comment 4•5 years ago
•
|
||
That's just my style of reporting bugs.I report bugs (mainly WebRender and previously Stylo) from my Linux perspective in exchange for Mozilla's work on Servo.
- Advanced Layers and WebRender are fine.
- In addition to Linux, Direct3D 11 and Basic on Win10 are affected as well: Street names are mostly unreadable. It's your search engine partner in Russia. I assume this means Win7 is likewise affected and it doesn't have WebRender.
Please consider shipping fixes (bug 1656436 comment 26) instead of regressions. I would even naively ask to uplift bug 1658182 comment 5 because freezing the desktop is worse than a Firefox crash.
(Edit: I'm still upset and devastated, sorry.)
| Assignee | ||
Comment 5•5 years ago
|
||
From the nature of the artifacts, maybe texture unpack state? Hm...
| Reporter | ||
Updated•5 years ago
|
| Assignee | ||
Comment 6•5 years ago
|
||
Now that canvas-rr1 is updated to handle hooking extensions, I have a replayable recording of this.
Same recording works in Chrome but not in Firefox, so it's our issue for sure.
| Assignee | ||
Comment 7•5 years ago
|
||
- Add asserts that we are infact in the default state.
Comment 9•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 10•5 years ago
|
||
The easiest workaround from JS for this issue would be to call texImage twice if they've never been initialized before.
| Assignee | ||
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Is this worth uplifting to mozilla-release? Planning a 80.0.1 today...
Comment 13•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Description
•