Bug 1659225 - Apply UNPACK_ params only after init. r=lsalzman

+ Add asserts that we are infact in the default state.

Differential Revision: https://phabricator.services.mozilla.com/D87964